# svbump

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml  justfile
.github/workflows/: ci.yaml  release.yml
src/: main.rs
